--- a/src/marko/EntityInspector.marko
+++ b/src/marko/EntityInspector.marko
@@ -1,9 +1,9 @@
 <const/inspectorData = input.inspectorData || []>
 <const/componentNames = input.componentNames || []>
-<const/selectedEntityId = input.selectedEntityId>
+<const/selectedEntityIds = input.selectedEntityIds || []>
 <const/onSelectEntity = input.onSelectEntity>
 <let/showOnlySelected = false>
-<const/filteredData = showOnlySelected && selectedEntityId ? inspectorData.filter(e => e.entityId === selectedEntityId) : inspectorData>
+<const/filteredData = inspectorData.filter(entity => !showOnlySelected || selectedEntityIds.length === 0 || selectedEntityIds.includes(entity.entityId))>
 
 <div class="entity-inspector">
   <h1>Entity Inspector</h1>
@@ -17,13 +17,12 @@
           checked=showOnlySelected
           onChange() { showOnlySelected = !showOnlySelected }
         />
-        Show only selected entity
+        Show only selected entities
       </label>
     </div>
   </div>
   
-  <p>${selectedEntityId !== null && showOnlySelected ? 'showing selected entity' : `showing all ${filteredData.length} entities in current level`}</p>
-  <!-- <p>Entities in the current level: ${filteredData.length === inspectorData.length ? '' : `(showing ${filteredData.length} of ${inspectorData.length})`}</p> -->
+  <p>${selectedEntityIds.length > 0 && showOnlySelected ? `showing ${selectedEntityIds.length} selected ${selectedEntityIds.length === 1 ? 'entity' : 'entities'}` : `showing all ${filteredData.length} entities in current level`}</p>
   <div class="inspector-table-container">
     <table class="inspector-table">
       <thead>
@@ -43,7 +42,7 @@
           <tr 
             class=[
               "inspector-row",
-              selectedEntityId === entity.entityId && "inspector-row-selected"
+              selectedEntityIds.includes(entity.entityId) && "inspector-row-selected"
             ]
             onClick() { onSelectEntity(entity.entityId) }
           >
@@ -57,7 +56,7 @@
               <td 
                 class=[
                   "inspector-cell",
-                  selectedEntityId === entity.entityId ? "inspector-cell-selected" : "inspector-cell-normal",
+                  selectedEntityIds.includes(entity.entityId) ? "inspector-cell-selected" : "inspector-cell-normal",
                   entity.componentData[componentName] == null && "inspector-cell-empty"
                 ]
                 title=(entity.componentData[componentName] != null ? JSON.stringify(entity.componentData[componentName], null, 2) : '')
