translate sign-in-form

--- a/src/marko/ToolbarSection.marko
+++ b/src/marko/ToolbarSection.marko
@@ -70,3 +70,12 @@ import { inputHandlers } from "../inputs"
     </if>
   </section>
 </div>
+<style>
+  :root {
+    --button-width: calc(var(--canvas-screen-px-per-native-px) * 50);
+
+    button {
+      width: var(--button-width);
+    }
+  }
+</style>
