--- a/src/marko/MainMenu.marko
+++ b/src/marko/MainMenu.marko
@@ -10,13 +10,13 @@
       <if=isAtStart>
         <li class="menu-item">
           <img src="/assets/images/star-icon.gif" class="menu-icon" />
-          <a href="#game" onClick(e) { e.preventDefault(); onNavigate('game') }>start</a>
+          <a href="#game">start</a>
         </li>
       </if>
       <else>
         <li class="menu-item">
           <img src="/assets/images/star-icon.gif" class="menu-icon" />
-          <a href="#game" onClick(e) { e.preventDefault(); onNavigate('game') }>resume</a>
+          <a href="#game">resume</a>
         </li>
       </else>
       <li class="menu-item">
