--- a/src/marko/SplitPane.marko
+++ b/src/marko/SplitPane.marko
@@ -85,7 +85,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: stretch;
+    align-items: center;
     padding: 0;
   }
 
